<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pbEventList"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvEventList"
        app:layout_constraintEnd_toEndOf="@+id/rvEventList"
        app:layout_constraintStart_toStartOf="@+id/rvEventList"
        app:layout_constraintTop_toTopOf="@+id/rvEventList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEventList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svEvents"
        tools:listitem="@layout/item_event" />

    <SearchView
        android:id="@+id/svEvents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:queryHint="@string/var_item_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>