<resources>
    <string name="app_name">Football League</string>

    <string name="title_league">Leagues</string>
    <string name="title_event">Events</string>
    <string name="title_favorite">Favorites</string>

    <string name="var_league">League</string>
    <string name="var_event">Event</string>
    <string name="var_date">Date UTC</string>
    <string name="var_time">Date Locale</string>
    <string name="var_team">Team</string>
    <string name="var_country">Country</string>
    <string name="var_website">Website</string>
    <string name="var_youtube">Youtube</string>
    <string name="var_description">Description</string>

    <string name="var_item_search">Search</string>
    <string name="var_item_detail">Detail</string>
    <string name="var_item_next">Next Match</string>
    <string name="var_item_prev">Previous Match</string>
    <string name="var_item_team">Teams</string>
    <string name="var_item_classement">Classement</string>

...
