<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_leagues"
        android:icon="@drawable/ic_flag_white_24dp"
        android:title="@string/title_league" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_device_hub_white_24dp"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_teams"
        android:icon="@drawable/ic_people_white_24dp"
        android:title="@string/var_item_team" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/title_favorite" />
</menu>